@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.onlinestream.hu" version="1.1.8" name="Online Stream" provider-name="aky01">
+<addon id="plugin.video.onlinestream.hu" version="1.1.9" name="Online Stream" provider-name="aky01">
 	<requires>
 		<import addon="script.module.kodi-six" />
 		<import addon="script.module.requests" />
@@ -24,6 +24,6 @@
 			<screenshot>resources/screenshots/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
-		<news>- Webkamerák kategória</news>
+		<news>- Egyedi user agent</news>
 	</extension>
 </addon>
